[metadata]
name = common-kv
version = 0.1.1
author = Kevin Vinsen
author_email = kvn1961@gmail.com
description = Kevin Vinsen - common code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    humanfriendly
    psutil
    pytest
    ruamel.yaml
    tabulate

[options.packages.find]
where = src